# badger

./: .gitignore  Cargo.toml  FUTURE_PHASES.md  IMPLEMENTATION_ROADMAP.md  MEMORY_MAPPED_MIGRATION.md  MEMORY_MAPPED_MIGRATION_COMPREHENSIVE.md  ORCHESTRATOR_IMPLEMENTATION.md  PHASE1_INSIDER_CAPABILITIES.md  README.md  TRADING_BOT_ROADMAP.md  WALLET_EXPORT_GUIDE.md  WALLET_INTELLIGENCE_DESIGN.md  config.toml  demo_working_integration.rs  export_wallet.sh  extract_private_key.rs  simple_export.rs
config/: badger.toml  logging.toml  triggers.toml  wallets.json
crates/badger-core/: Cargo.toml
crates/badger-core/src/: types.rs
crates/badger-ingest/: Cargo.toml
crates/badger-ingest/src/: filter.rs  lib.rs  parser.rs  stream.rs
crates/badger-scout/: Cargo.toml
crates/badger-scout/src/: filter.rs  lib.rs  liquidity.rs  scanner.rs
crates/badger-stalker/: Cargo.toml
crates/badger-stalker/src/: detector.rs  lib.rs  monitor.rs  scorer.rs
crates/badger-strike/: Cargo.toml
crates/badger-strike/src/: executor.rs  lib.rs  sniper.rs  trigger.rs
crates/badger-transport/: Cargo.toml
crates/badger-transport/src/: alert_bus.rs  lib.rs  market_bus.rs  signal_bus.rs
data/: badger.db  badger.db-shm  badger.db-wal
docs/: FUND_MANAGER.md  ORCHESTRATOR_USAGE.md  PORTFOLIO_TRACKING.md
migrations/: 001_initial_schema.sql
scripts/: deploy.sh  optimize.sh
src/: integration_test.rs  lib.rs  main.rs  pumpbot_main.rs
src/algo/: analyzer.rs  analyzer_windowing.rs  math_calculations.rs  signal_processor.rs
src/client/: event_parser.rs  mod.rs  websocket.rs
src/config/: manager.rs  mod.rs  strategy.rs
src/core/: constants.rs  dex_types.rs  fund_manager.rs  mod.rs  portfolio_tracker.rs  types.rs  wallet_management.rs
src/core/db/: hash_utils.rs  mmap_db.rs  mod.rs
src/database/: batch.rs  cleanup.rs  migrations.rs  mod.rs  models.rs  services.rs  validation.rs
src/database/analytics/: insider_analytics.rs  mod.rs  performance_tracker.rs  pnl_calculator.rs  position_tracker.rs
src/execution/: mod.rs  monitor.rs  portfolio.rs  position.rs  risk.rs  strategy.rs  trading.rs
src/handlers/: fund_handler.rs  mod.rs  portfolio_handler.rs  scout_handler.rs  stalker_handler.rs  strike_handler.rs  transport_handler.rs  wallet_handler.rs
src/ingest/: dex_parsers.rs  minimal_test.rs  mod.rs  websocket.rs
src/intelligence/: background_sync.rs  cache.rs  copy_trader.rs  insider_detector.rs  mmap_db.rs  mod.rs  performance_tracker.rs  types.rs
src/momentum/: dexscreener_client.rs  mod.rs  momentum_criteria.rs  signal_processor.rs  websocket_client.rs
src/scout/: filter.rs  liquidity.rs  mod.rs  scanner.rs
src/stalker/: cache.rs  copy_trader.rs  detector.rs  mod.rs  monitor.rs  scorer.rs
src/strike/: dex_client.rs  executor.rs  mod.rs  sniper.rs  trigger.rs  wallet.rs
src/trading/: execution_engine.rs  jupiter_client.rs  mod.rs
src/transport/: alert_bus.rs  enhanced_bus.rs  events.rs  market_bus.rs  mod.rs  routing.rs  signal_bus.rs  signals.rs
src/util/: criteria.rs  dexscreener.rs  display.rs  display_helpers.rs  mod.rs  portfolio_display.rs  price_feed.rs
ui/: index.html  settings.html
